added directline service

--- a/chatbot-api/Chatbot.API/appsettings.json
+++ b/chatbot-api/Chatbot.API/appsettings.json
@@ -3,5 +3,7 @@
   "MicrosoftAppPassword": "",
   "DefaultRootUrl": "http://localhost:3979",
   "ReceitaServiceUrl": "https://www.receitaws.com.br",
-  "ReceitaServiceToken": ""
+  "ReceitaServiceToken": "",
+  "AzureDirectLineSecret": "",
+  "AzureDirectLineGenerateTokenUrl": "https://directline.botframework.com/v3/directline/tokens/generate"
 }
