messages and dialogs refactoring

--- a/chatbot-api/Chatbot.API/appsettings.json
+++ b/chatbot-api/Chatbot.API/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "MicrosoftAppId": "",
   "MicrosoftAppPassword": "",
-  "DefaultRootUrl": "http://localhost:3979",
+  "WebUiAppUrl": "https://azr-br-rg-bot-webui.azurewebsites.net",
   "ReceitaServiceUrl": "https://www.receitaws.com.br",
   "ReceitaServiceToken": "",
   "AzureDirectLineSecret": "",
