created process to save User Conversation into the DocumentDB and separated models using DTO, ServiceModels and Models

--- a/chatbot-api/Chatbot.API/appsettings.json
+++ b/chatbot-api/Chatbot.API/appsettings.json
@@ -1,9 +1,14 @@
 ﻿{
   "MicrosoftAppId": "",
   "MicrosoftAppPassword": "",
+  
   "WebUiAppUrl": "https://azr-br-rg-bot-webui.azurewebsites.net",
+  
   "ReceitaServiceUrl": "https://www.receitaws.com.br",
   "ReceitaServiceToken": "",
+  
   "AzureDirectLineSecret": "",
-  "AzureDirectLineGenerateTokenUrl": "https://directline.botframework.com/v3/directline/tokens/generate"
+  "AzureDirectLineGenerateTokenUrl": "https://directline.botframework.com/v3/directline/tokens/generate",
+
+  "DocumentDbEndpointURI": "https://foodapp-api.azurewebsites.net"
 }
