--- a/chatbot-ui/package.json
+++ b/chatbot-ui/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.0.3",
     "botframework-directlinejs": "^0.11.4",
     "guid-typescript": "^1.0.9",
+    "milliseconds": "^1.0.3",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
