--- a/chatbot-api/Chatbot.API/ComplexDialogBot.csproj
+++ b/chatbot-api/Chatbot.API/ComplexDialogBot.csproj
@@ -1,14 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App"/>
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All"/>
-    <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.4.3"/>
-    <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.4.3"/>
+    <PackageReference Include="Microsoft.AspNetCore.All" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.2" />
     <PackageReference Include="Microsoft.Recognizers.Text.DataTypes.TimexExpression" Version="1.1.5"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.1.1"/>
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.5.1"/>
+    <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.5.1"/>
+    <PackageReference Include="Microsoft.Bot.Builder.Azure" Version="4.5.1"/>
+    <PackageReference Include="Microsoft.Bot.Builder.Solutions" Version="4.5.1"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Chatbot.Model\Chatbot.Model.csproj"/>
